Fix some PHP dependencies

--- a/custom-php/Dockerfile
+++ b/custom-php/Dockerfile
@@ -1,8 +1,14 @@
 FROM php:7.2-apache
 RUN a2enmod rewrite
-RUN apt-get update && apt-get install -y zlib1g-dev libicu-dev g++ && \
-    docker-php-ext-install intl && \
-    docker-php-ext-enable intl
+RUN apt-get update && apt-get install -y zlib1g-dev libpng-dev libicu-dev libfreetype6-dev libjpeg62-turbo-dev libxml2-dev g++
+RUN docker-php-ext-configure gd \
+    --with-gd \
+    --with-freetype-dir=/usr/include/ \
+    --with-png-dir=/usr/include/ \
+    --with-jpeg-dir=/usr/include/ && \
+  NPROC=$(grep -c ^processor /proc/cpuinfo 2>/dev/null || 1) && \
+  docker-php-ext-install -j${NPROC} gd
+RUN docker-php-ext-install pdo intl exif json opcache posix xml fileinfo zip
 
 ENV APACHE_DOCUMENT_ROOT /var/www/html/public
 
